fixed z-index stuff

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,16 +86,20 @@ body {
 
 img {
 	position: relative !important;
-	z-index: 9999 !important;
+	z-index: 10 !important;
 }
 
 iframe {
 	position: relative !important;
-	z-index: 9999 !important;
+	z-index: 10 !important;
 }
 
 a {
   position: relative !important;
+	z-index: 10 !important;
+}
+
+nav {
 	z-index: 9999 !important;
 }
 
